--- a/slides.html
+++ b/slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Predicción de delitos mediante un enfoque espaciotemporal</title>
+    <title>Predicción de robos mediante un enfoque espaciotemporal</title>
     <meta charset="utf-8" />
     <meta name="author" content="Rafael Zambrano" />
     <script src="slides_files/header-attrs-2.14/header-attrs.js"></script>
@@ -25,7 +25,7 @@ class: center
 
 
 
-# Predicción de delitos mediante un enfoque espaciotemporal
+# Predicción de robos mediante un enfoque espaciotemporal
 
 &lt;br&gt;
 
@@ -448,12 +448,12 @@ class: chapter-slide
 * Finalmente se implementa un modelo híbrido donde compiten los modelos ARIMA y Croston, seleccionando el mejor para cada serie según el error porcentual medio arcotangente (MAAPE).
 
 
-<div id="ogjmfkocqt" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="saitoihrzu" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#ogjmfkocqt .gt_table {
+#saitoihrzu .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -478,7 +478,7 @@ class: chapter-slide
   border-left-color: #D3D3D3;
 }
 
-#ogjmfkocqt .gt_heading {
+#saitoihrzu .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -490,7 +490,7 @@ class: chapter-slide
   border-right-color: #D3D3D3;
 }
 
-#ogjmfkocqt .gt_title {
+#saitoihrzu .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -500,7 +500,7 @@ class: chapter-slide
   border-bottom-width: 0;
 }
 
-#ogjmfkocqt .gt_subtitle {
+#saitoihrzu .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -510,13 +510,13 @@ class: chapter-slide
   border-top-width: 0;
 }
 
-#ogjmfkocqt .gt_bottom_border {
+#saitoihrzu .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#ogjmfkocqt .gt_col_headings {
+#saitoihrzu .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -531,7 +531,7 @@ class: chapter-slide
   border-right-color: #D3D3D3;
 }
 
-#ogjmfkocqt .gt_col_heading {
+#saitoihrzu .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -551,7 +551,7 @@ class: chapter-slide
   overflow-x: hidden;
 }
 
-#ogjmfkocqt .gt_column_spanner_outer {
+#saitoihrzu .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -563,15 +563,15 @@ class: chapter-slide
   padding-right: 4px;
 }
 
-#ogjmfkocqt .gt_column_spanner_outer:first-child {
+#saitoihrzu .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#ogjmfkocqt .gt_column_spanner_outer:last-child {
+#saitoihrzu .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#ogjmfkocqt .gt_column_spanner {
+#saitoihrzu .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -583,7 +583,7 @@ class: chapter-slide
   width: 100%;
 }
 
-#ogjmfkocqt .gt_group_heading {
+#saitoihrzu .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -605,7 +605,7 @@ class: chapter-slide
   vertical-align: middle;
 }
 
-#ogjmfkocqt .gt_empty_group_heading {
+#saitoihrzu .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -620,15 +620,15 @@ class: chapter-slide
   vertical-align: middle;
 }
 
-#ogjmfkocqt .gt_from_md > :first-child {
+#saitoihrzu .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#ogjmfkocqt .gt_from_md > :last-child {
+#saitoihrzu .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#ogjmfkocqt .gt_row {
+#saitoihrzu .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -647,7 +647,7 @@ class: chapter-slide
   overflow-x: hidden;
 }
 
-#ogjmfkocqt .gt_stub {
+#saitoihrzu .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -659,7 +659,7 @@ class: chapter-slide
   padding-left: 12px;
 }
 
-#ogjmfkocqt .gt_summary_row {
+#saitoihrzu .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -669,7 +669,7 @@ class: chapter-slide
   padding-right: 5px;
 }
 
-#ogjmfkocqt .gt_first_summary_row {
+#saitoihrzu .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -679,7 +679,7 @@ class: chapter-slide
   border-top-color: #D3D3D3;
 }
 
-#ogjmfkocqt .gt_grand_summary_row {
+#saitoihrzu .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -689,7 +689,7 @@ class: chapter-slide
   padding-right: 5px;
 }
 
-#ogjmfkocqt .gt_first_grand_summary_row {
+#saitoihrzu .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -699,11 +699,11 @@ class: chapter-slide
   border-top-color: #D3D3D3;
 }
 
-#ogjmfkocqt .gt_striped {
+#saitoihrzu .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#ogjmfkocqt .gt_table_body {
+#saitoihrzu .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -712,7 +712,7 @@ class: chapter-slide
   border-bottom-color: #D3D3D3;
 }
 
-#ogjmfkocqt .gt_footnotes {
+#saitoihrzu .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -726,13 +726,13 @@ class: chapter-slide
   border-right-color: #D3D3D3;
 }
 
-#ogjmfkocqt .gt_footnote {
+#saitoihrzu .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#ogjmfkocqt .gt_sourcenotes {
+#saitoihrzu .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -746,41 +746,41 @@ class: chapter-slide
   border-right-color: #D3D3D3;
 }
 
-#ogjmfkocqt .gt_sourcenote {
+#saitoihrzu .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#ogjmfkocqt .gt_left {
+#saitoihrzu .gt_left {
   text-align: left;
 }
 
-#ogjmfkocqt .gt_center {
+#saitoihrzu .gt_center {
   text-align: center;
 }
 
-#ogjmfkocqt .gt_right {
+#saitoihrzu .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#ogjmfkocqt .gt_font_normal {
+#saitoihrzu .gt_font_normal {
   font-weight: normal;
 }
 
-#ogjmfkocqt .gt_font_bold {
+#saitoihrzu .gt_font_bold {
   font-weight: bold;
 }
 
-#ogjmfkocqt .gt_font_italic {
+#saitoihrzu .gt_font_italic {
   font-style: italic;
 }
 
-#ogjmfkocqt .gt_super {
+#saitoihrzu .gt_super {
   font-size: 65%;
 }
 
-#ogjmfkocqt .gt_footnote_marks {
+#saitoihrzu .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 65%;
