--- a/slides.html
+++ b/slides.html
@@ -112,9 +112,9 @@ class: chapter-slide
 
 - **Predicción de robos** sobre las esquinas de la Ciudad de Buenos Aires. 
 
-- Combinación de factores **temporales y esapciales** relacionados con la ocurrencia del robo. 
+- Combinación de factores **temporales y espaciales** relacionados con la ocurrencia del robo. 
 
-- Modelado **espaciotemporal** de la ocrrencia de robos.
+- Modelado **espaciotemporal** de la ocurrencia de robos.
 
 - Enfoque de series de tiempo y de datos de corte transversal.
 
@@ -135,7 +135,7 @@ class: chapter-slide
 
 ### Fuentes de datos
 
-* El repositorio de datps del Gobierno de la Ciudad Autónoma de Buenos Aires **([link](https://data.buenosaires.gob.ar/dataset/))**,es la principal y única fuente de datos, desde este lugar se extraen los datos referentes a robos ocurridos, factores meteorológicos y elementos físicos del entorno cercano a la ocurrencia de robos.
+* El repositorio de datos del Gobierno de la Ciudad Autónoma de Buenos Aires **([link](https://data.buenosaires.gob.ar/dataset/))**,es la principal y única fuente de datos, desde este lugar se extraen los datos referentes a robos ocurridos, factores meteorológicos y elementos físicos del entorno cercano a la ocurrencia de robos.
 
 
 ---
@@ -268,7 +268,7 @@ un radio de 200 metros para cada esquina en cada uno de los meses analizados.
 
 ### Construcción del Dataset
 
-* El paso final para la construcción del dataset definitivo, consiste en la implementación de la técnica de **“ventana deslizante”**, esta tecnica fue operacilaizada en el paquete {sknifedatar} 📦.
+* El paso final para la construcción del dataset definitivo, consiste en la implementación de la técnica de **“ventana deslizante”**,  esta técnica fue operacionalizada en el paquete {sknifedatar} 📦.
 
 
 &lt;img src="images/diagrama_ventanas.png" width="80%" style="display: block; margin: auto;" /&gt;
@@ -432,7 +432,7 @@ class: chapter-slide
 
 * Para todos los modelos se observa el error cuadrático medio (RMSE) y el error absoluto medio (MAE), ambas métricas se muestran de forma habitual en el proceso de evaluación de modelos.
 
-* Se incluye tambien el error logarítmico cuadrático medio (RMSLE).
+* Se incluye también el error logarítmico cuadrático medio (RMSLE).
 
 * Se incluyen otro grupo de métricas complementarias, sin embargo, se mostrarán únicamente las 3 mencionadas anteriormente.
 
@@ -448,12 +448,12 @@ class: chapter-slide
 * Finalmente se implementa un modelo híbrido donde compiten los modelos ARIMA y Croston, seleccionando el mejor para cada serie según el error porcentual medio arcotangente (MAAPE).
 
 
-<div id="saitoihrzu" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="euzbavmjrd" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#saitoihrzu .gt_table {
+#euzbavmjrd .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -478,7 +478,7 @@ class: chapter-slide
   border-left-color: #D3D3D3;
 }
 
-#saitoihrzu .gt_heading {
+#euzbavmjrd .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -490,7 +490,7 @@ class: chapter-slide
   border-right-color: #D3D3D3;
 }
 
-#saitoihrzu .gt_title {
+#euzbavmjrd .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -500,7 +500,7 @@ class: chapter-slide
   border-bottom-width: 0;
 }
 
-#saitoihrzu .gt_subtitle {
+#euzbavmjrd .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -510,13 +510,13 @@ class: chapter-slide
   border-top-width: 0;
 }
 
-#saitoihrzu .gt_bottom_border {
+#euzbavmjrd .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#saitoihrzu .gt_col_headings {
+#euzbavmjrd .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -531,7 +531,7 @@ class: chapter-slide
   border-right-color: #D3D3D3;
 }
 
-#saitoihrzu .gt_col_heading {
+#euzbavmjrd .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -551,7 +551,7 @@ class: chapter-slide
   overflow-x: hidden;
 }
 
-#saitoihrzu .gt_column_spanner_outer {
+#euzbavmjrd .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -563,15 +563,15 @@ class: chapter-slide
   padding-right: 4px;
 }
 
-#saitoihrzu .gt_column_spanner_outer:first-child {
+#euzbavmjrd .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#saitoihrzu .gt_column_spanner_outer:last-child {
+#euzbavmjrd .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#saitoihrzu .gt_column_spanner {
+#euzbavmjrd .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -583,7 +583,7 @@ class: chapter-slide
   width: 100%;
 }
 
-#saitoihrzu .gt_group_heading {
+#euzbavmjrd .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -605,7 +605,7 @@ class: chapter-slide
   vertical-align: middle;
 }
 
-#saitoihrzu .gt_empty_group_heading {
+#euzbavmjrd .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -620,15 +620,15 @@ class: chapter-slide
   vertical-align: middle;
 }
 
-#saitoihrzu .gt_from_md > :first-child {
+#euzbavmjrd .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#saitoihrzu .gt_from_md > :last-child {
+#euzbavmjrd .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#saitoihrzu .gt_row {
+#euzbavmjrd .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -647,7 +647,7 @@ class: chapter-slide
   overflow-x: hidden;
 }
 
-#saitoihrzu .gt_stub {
+#euzbavmjrd .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -659,7 +659,7 @@ class: chapter-slide
   padding-left: 12px;
 }
 
-#saitoihrzu .gt_summary_row {
+#euzbavmjrd .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -669,7 +669,7 @@ class: chapter-slide
   padding-right: 5px;
 }
 
-#saitoihrzu .gt_first_summary_row {
+#euzbavmjrd .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -679,7 +679,7 @@ class: chapter-slide
   border-top-color: #D3D3D3;
 }
 
-#saitoihrzu .gt_grand_summary_row {
+#euzbavmjrd .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -689,7 +689,7 @@ class: chapter-slide
   padding-right: 5px;
 }
 
-#saitoihrzu .gt_first_grand_summary_row {
+#euzbavmjrd .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -699,11 +699,11 @@ class: chapter-slide
   border-top-color: #D3D3D3;
 }
 
-#saitoihrzu .gt_striped {
+#euzbavmjrd .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#saitoihrzu .gt_table_body {
+#euzbavmjrd .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -712,7 +712,7 @@ class: chapter-slide
   border-bottom-color: #D3D3D3;
 }
 
-#saitoihrzu .gt_footnotes {
+#euzbavmjrd .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -726,13 +726,13 @@ class: chapter-slide
   border-right-color: #D3D3D3;
 }
 
-#saitoihrzu .gt_footnote {
+#euzbavmjrd .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#saitoihrzu .gt_sourcenotes {
+#euzbavmjrd .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -746,41 +746,41 @@ class: chapter-slide
   border-right-color: #D3D3D3;
 }
 
-#saitoihrzu .gt_sourcenote {
+#euzbavmjrd .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#saitoihrzu .gt_left {
+#euzbavmjrd .gt_left {
   text-align: left;
 }
 
-#saitoihrzu .gt_center {
+#euzbavmjrd .gt_center {
   text-align: center;
 }
 
-#saitoihrzu .gt_right {
+#euzbavmjrd .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#saitoihrzu .gt_font_normal {
+#euzbavmjrd .gt_font_normal {
   font-weight: normal;
 }
 
-#saitoihrzu .gt_font_bold {
+#euzbavmjrd .gt_font_bold {
   font-weight: bold;
 }
 
-#saitoihrzu .gt_font_italic {
+#euzbavmjrd .gt_font_italic {
   font-style: italic;
 }
 
-#saitoihrzu .gt_super {
+#euzbavmjrd .gt_super {
   font-size: 65%;
 }
 
-#saitoihrzu .gt_footnote_marks {
+#euzbavmjrd .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 65%;
