--- a/slides.html
+++ b/slides.html
@@ -234,7 +234,7 @@ un radio de 200 metros para cada esquina en cada uno de los meses analizados.
 
 #### Asociación de robos con esquinas
 
-&lt;img src="slides_files/figure-html/unnamed-chunk-13-1.png" width="50%" height="50%" style="display: block; margin: auto;" /&gt;
+&lt;img src="slides_files/figure-html/unnamed-chunk-12-1.png" width="50%" height="50%" style="display: block; margin: auto;" /&gt;
 
 
 ---
@@ -448,12 +448,12 @@ class: chapter-slide
 * Finalmente se implementa un modelo híbrido donde compiten los modelos ARIMA y Croston, seleccionando el mejor para cada serie según el error porcentual medio arcotangente (MAAPE).
 
 
-<div id="aaygrjefju" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="xuwkkebuap" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#aaygrjefju .gt_table {
+#xuwkkebuap .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -478,7 +478,7 @@ class: chapter-slide
   border-left-color: #D3D3D3;
 }
 
-#aaygrjefju .gt_heading {
+#xuwkkebuap .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -490,7 +490,7 @@ class: chapter-slide
   border-right-color: #D3D3D3;
 }
 
-#aaygrjefju .gt_title {
+#xuwkkebuap .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -500,7 +500,7 @@ class: chapter-slide
   border-bottom-width: 0;
 }
 
-#aaygrjefju .gt_subtitle {
+#xuwkkebuap .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -510,13 +510,13 @@ class: chapter-slide
   border-top-width: 0;
 }
 
-#aaygrjefju .gt_bottom_border {
+#xuwkkebuap .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#aaygrjefju .gt_col_headings {
+#xuwkkebuap .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -531,7 +531,7 @@ class: chapter-slide
   border-right-color: #D3D3D3;
 }
 
-#aaygrjefju .gt_col_heading {
+#xuwkkebuap .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -551,7 +551,7 @@ class: chapter-slide
   overflow-x: hidden;
 }
 
-#aaygrjefju .gt_column_spanner_outer {
+#xuwkkebuap .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -563,15 +563,15 @@ class: chapter-slide
   padding-right: 4px;
 }
 
-#aaygrjefju .gt_column_spanner_outer:first-child {
+#xuwkkebuap .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#aaygrjefju .gt_column_spanner_outer:last-child {
+#xuwkkebuap .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#aaygrjefju .gt_column_spanner {
+#xuwkkebuap .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -583,7 +583,7 @@ class: chapter-slide
   width: 100%;
 }
 
-#aaygrjefju .gt_group_heading {
+#xuwkkebuap .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -605,7 +605,7 @@ class: chapter-slide
   vertical-align: middle;
 }
 
-#aaygrjefju .gt_empty_group_heading {
+#xuwkkebuap .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -620,15 +620,15 @@ class: chapter-slide
   vertical-align: middle;
 }
 
-#aaygrjefju .gt_from_md > :first-child {
+#xuwkkebuap .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#aaygrjefju .gt_from_md > :last-child {
+#xuwkkebuap .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#aaygrjefju .gt_row {
+#xuwkkebuap .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -647,7 +647,7 @@ class: chapter-slide
   overflow-x: hidden;
 }
 
-#aaygrjefju .gt_stub {
+#xuwkkebuap .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -659,7 +659,7 @@ class: chapter-slide
   padding-left: 12px;
 }
 
-#aaygrjefju .gt_summary_row {
+#xuwkkebuap .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -669,7 +669,7 @@ class: chapter-slide
   padding-right: 5px;
 }
 
-#aaygrjefju .gt_first_summary_row {
+#xuwkkebuap .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -679,7 +679,7 @@ class: chapter-slide
   border-top-color: #D3D3D3;
 }
 
-#aaygrjefju .gt_grand_summary_row {
+#xuwkkebuap .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -689,7 +689,7 @@ class: chapter-slide
   padding-right: 5px;
 }
 
-#aaygrjefju .gt_first_grand_summary_row {
+#xuwkkebuap .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -699,11 +699,11 @@ class: chapter-slide
   border-top-color: #D3D3D3;
 }
 
-#aaygrjefju .gt_striped {
+#xuwkkebuap .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#aaygrjefju .gt_table_body {
+#xuwkkebuap .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -712,7 +712,7 @@ class: chapter-slide
   border-bottom-color: #D3D3D3;
 }
 
-#aaygrjefju .gt_footnotes {
+#xuwkkebuap .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -726,13 +726,13 @@ class: chapter-slide
   border-right-color: #D3D3D3;
 }
 
-#aaygrjefju .gt_footnote {
+#xuwkkebuap .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#aaygrjefju .gt_sourcenotes {
+#xuwkkebuap .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -746,41 +746,41 @@ class: chapter-slide
   border-right-color: #D3D3D3;
 }
 
-#aaygrjefju .gt_sourcenote {
+#xuwkkebuap .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#aaygrjefju .gt_left {
+#xuwkkebuap .gt_left {
   text-align: left;
 }
 
-#aaygrjefju .gt_center {
+#xuwkkebuap .gt_center {
   text-align: center;
 }
 
-#aaygrjefju .gt_right {
+#xuwkkebuap .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#aaygrjefju .gt_font_normal {
+#xuwkkebuap .gt_font_normal {
   font-weight: normal;
 }
 
-#aaygrjefju .gt_font_bold {
+#xuwkkebuap .gt_font_bold {
   font-weight: bold;
 }
 
-#aaygrjefju .gt_font_italic {
+#xuwkkebuap .gt_font_italic {
   font-style: italic;
 }
 
-#aaygrjefju .gt_super {
+#xuwkkebuap .gt_super {
   font-size: 65%;
 }
 
-#aaygrjefju .gt_footnote_marks {
+#xuwkkebuap .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 65%;
